fixing overflow and mobile issues

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -6,5 +6,4 @@
 .about-text {
     font-size: 1.04em;
     font-weight: 400;
-    transition: 2s;
 }
