--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,11 +10,13 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body{
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .anchor {
